# quantterm

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  model.pkl  pyproject.toml  quantterm.bat
.github/workflows/: ci.yml
config/: logging.yaml  settings.py
docs/architecture/: backtesting_framework.md
docs/installation/: windows.md
quantterm/: __init__.py  __main__.py
quantterm/analytics/technical/: indicators.py
quantterm/backtesting/: __init__.py  data_handler.py  engine.py  events.py  execution.py  metrics.py  portfolio.py
quantterm/backtesting/strategy/: __init__.py  base.py  complex.py  market_neutral.py  rebalancing.py
quantterm/cli/: main.py  utils.py
quantterm/cli/commands/: backtest.py  config.py  derivatives.py  fixed_income.py  market_data.py  ml.py  optimize.py  paper.py  portfolio.py  risk.py  technical.py
quantterm/core/: __init__.py  enums.py  exceptions.py
quantterm/core/models/: derivatives.py  market_data.py  portfolio.py
quantterm/data/providers/: yahoo.py
quantterm/derivatives/pricing/: black_scholes.py
quantterm/fixed_income/: __init__.py  bonds.py  fred_data.py  portfolio.py  yield_curve.py
quantterm/live/: __init__.py  data_feed.py  paper_trading.py  strategy_runner.py
quantterm/ml/: __init__.py  features.py  models.py  strategy.py
quantterm/optimization/: __init__.py  bayesian.py  walk_forward.py
quantterm/portfolio/optimization/: mean_variance.py
quantterm/portfolio/risk/: var.py
quantterm/security/: __init__.py  secrets.py
quantterm/utils/: __init__.py  bulkhead.py  resilience.py  security.py  telemetry.py
scripts/: quantterm.bat  quantterm.ps1
tests/fixed_income/: __init__.py  test_bonds.py
tests/integration/: test_cached_data.py  test_cli_workflows.py
tests/live/: __init__.py  test_paper_trading.py
tests/ml/: test_features.py
tests/optimization/: test_bayesian.py
tests/property/: test_financial_invariants.py
tests/security/: __init__.py  test_model_security.py  test_secrets.py
tests/stress/: __init__.py  test_complex.py
tests/unit/: test_cache.py
tests/validation/: test_numerical_accuracy.py
