[tool.poetry]
name = "quantterm"
version = "0.1.0"
description = "Institutional-grade quantitative finance CLI platform"
authors = ["QuantTerm Team <team@quantterm.io>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/quantterm/quantterm"
repository = "https://github.com/quantterm/quantterm"
documentation = "https://quantterm.readthedocs.io"
packages = [{include = "quantterm"}]
include = []

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: Commercial",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

[tool.poetry.dependencies]
python = "^3.11|^3.12|^3.13"
# Core
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
typer = "^0.9.0"
rich = "^13.7.0"
rich-argparse = "^0.2.0"

# Data & Numerics
numpy = ">=1.26.0"
pandas = ">=2.1.0"
scipy = ">=1.11.0"
# numba - disabled: does not support Python 3.13 yet
# numba = ">=0.60.0"

# Financial
quantlib = "^1.34"

# Data Sources
yfinance = "^0.2.35"
pandas-datareader = "^0.10.0"

# Optimization
cvxpy = "^1.4.0"

# Time Series
statsmodels = "^0.14.0"
arch = "^7.0.0"

# Storage
pyarrow = ">=14.0.0"
pyarrow-hotfix = ">=0.6"
redis = ">=5.0.0"

# Utilities
python-dotenv = "^1.0.0"
pyyaml = "^6.0.0"
tqdm = "^4.66.0"
click = "^8.1.0"
httpx = "^0.25.0"
aiohttp = "^3.9.0"
msgspec = "^0.18.0"

# Documentation & Testing
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
hypothesis = "^6.92.0"
mypy = "^1.7.0"
ruff = "^0.1.0"
black = "^23.11.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.18.0"
jupyter = "^1.0.0"
weasyprint = "^60.0"
jinja2 = "^3.1.0"

[tool.poetry.scripts]
qt = "quantterm.cli.main:app"
quantterm = "quantterm.__main__:main"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=quantterm",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::FutureWarning",
    "ignore::DeprecationWarning",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
